# fall-risk-prediction

./: .gitignore  Makefile  README.md  fall-risk-tech-tasks.html  log.md  pyproject.toml  tips.md  挑战杯大纲0.1.md
configs/: base.yaml
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: 260722_KID更新.md  fall-risk-tech-tasks.html  guide.md  log.md  tips.md  任务整理.md  挑战杯大纲0.1.md  数据安全与合规说明.md  更新日志.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
scripts/: check_env.py  collect_video.py  extract_keypoints.py  preprocess_videos.py  test_pipeline.py  train.py  update_task_checklist.py
src/alerts/: __init__.py  engine.py
src/api/: __init__.py  database.py  main.py  routes.py  websocket.py
src/data/: __init__.py  dataset.py  frame_filter.py  human_detector.py  keypoint_extractor.py  keypoint_store.py  preprocess.py  video_capture.py
src/edge/: __init__.py
src/inference/: __init__.py  baseline.py  deviation.py  features.py  monitor.py
src/models/: __init__.py  fall_risk_predictor.py  multimodal_fusion.py  risk_head.py  temporal_encoder.py
src/utils/: __init__.py  config.py  keypoints.py  logger.py
tests/: test_core.py  test_integration_monitor.py  test_smoke.py
