[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fall-risk-prediction"
version = "0.1.0"
description = "基于多模态AI监测的老年人跌倒风险前置防控系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "挑战杯参赛团队"}
]

dependencies = [
    # ── 深度学习核心 ──
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",

    # ── 计算机视觉 ──
    "opencv-python-headless>=4.9.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",

    # ── 数据处理 ──
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",

    # ── 后端服务 ──
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "redis>=5.0.0",

    # ── 配置与日志 ──
    "omegaconf>=2.3.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",

    # ── 可视化 ──
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # ── 工具 ──
    "tqdm>=4.66.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"